@@ -555,3 +555,7 @@ verilog/parser_sv.v:262: TASK  'task' 'hidden'
 verilog/parser_sv.v:263: VAR  'typedef' 'T' 'task' '' 'bit' '' ''
 verilog/parser_sv.v:264: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:265: ENDMODULE  'endmodule'
+verilog/parser_sv.v:268: VAR  'member' 'm_a' 'struct' '' 'rand int' '' ''
+verilog/parser_sv.v:269: VAR  'member' 'm_b' 'struct' '' 'bit [7:0]' '' ''
+verilog/parser_sv.v:267: VAR  'typedef' 't_bug91' 'netlist' '' 'struct' '' ''
+verilog/parser_sv.v:271: VAR  'var' 'v_bug91' 'netlist' '' 't_bug91' '' ''
